WIP experiment on supporting "cdv" scheme via WKURLSchemeHandler for ios 11+.  Due to an ios bug (https://bugs.webkit.org/show_bug.cgi?id=203302) this does not work for large files.