src/ios/CDVWKURLSchemeHandler.h
@@ -1,0 +1,6 @@
+#import <Foundation/Foundation.h>
+#import <WebKit/WebKit.h>
+
+@interface CDVWKURLSchemeHandler : NSObject <WKURLSchemeHandler>
+
+@end
