src/ios/CDVWKURLSchemeHandler.m
@@ -1,0 +1,66 @@
+// This file is heavily inspired by cordova-plugin-ionic-webview's IONAssetHandler.m (2019-12-22)
+
+#import "CDVWKURLSchemeHandler.h"
+#import <MobileCoreServices/MobileCoreServices.h>
+#import "CDVWKWebViewEngine.h"
+
+@implementation CDVWKURLSchemeHandler
+
+- (void)webView:(WKWebView *)webView startURLSchemeTask:(id <WKURLSchemeTask>)urlSchemeTask API_AVAILABLE(ios(11.0))
+{
+    NSURLRequest *req = urlSchemeTask.request;
+    NSURL * url = urlSchemeTask.request.URL;
+    NSString * stringToLoad = url.path;
+    
+    NSError * fileError = nil;
+    NSData * data = nil;
+    if ([self isMediaExtension:url.pathExtension]) {
+        data = [NSData dataWithContentsOfFile:stringToLoad options:NSDataReadingMappedIfSafe error:&fileError];
+    }
+    if (!data || fileError) {
+        data =  [[NSData alloc] initWithContentsOfFile:stringToLoad];
+    }
+    NSInteger statusCode = 200;
+    if (!data) {
+        statusCode = 404;
+    }
+    NSURL * localUrl = [NSURL URLWithString:url.absoluteString];
+    NSString * mimeType = [self getMimeType:url.pathExtension];
+    id response = nil;
+   if (data && [self isMediaExtension:url.pathExtension]) {
+       response = [[NSURLResponse alloc] initWithURL:localUrl MIMEType:nil expectedContentLength:data.length textEncodingName:nil];
+   } else {
+        NSDictionary * headers = @{ @"Content-Type" : mimeType, @"Cache-Control": @"no-cache"};
+        response = [[NSHTTPURLResponse alloc] initWithURL:localUrl statusCode:statusCode HTTPVersion:nil headerFields:headers];
+   }
+    
+    [urlSchemeTask didReceiveResponse:response];
+    [urlSchemeTask didReceiveData:data];
+    [urlSchemeTask didFinish];
+}
+
+- (void)webView:(nonnull WKWebView *)webView stopURLSchemeTask:(nonnull id<WKURLSchemeTask>)urlSchemeTask API_AVAILABLE(ios(11.0))
+{
+}
+
+-(NSString *) getMimeType:(NSString *)fileExtension {
+    if (fileExtension && ![fileExtension isEqualToString:@""]) {
+        NSString *UTI = (__bridge_transfer NSString *)UTTypeCreatePreferredIdentifierForTag(kUTTagClassFilenameExtension, (__bridge CFStringRef)fileExtension, NULL);
+        NSString *contentType = (__bridge_transfer NSString *)UTTypeCopyPreferredTagWithClass((__bridge CFStringRef)UTI, kUTTagClassMIMEType);
+        return contentType ? contentType : @"application/octet-stream";
+    } else {
+        return @"text/html";
+    }
+}
+
+-(BOOL) isMediaExtension:(NSString *) pathExtension {
+    NSArray * mediaExtensions = @[@"m4v", @"mov", @"mp4",
+                           @"aac", @"ac3", @"aiff", @"au", @"flac", @"m4a", @"mp3", @"wav"];
+    if ([mediaExtensions containsObject:pathExtension.lowercaseString]) {
+        return YES;
+    }
+    return NO;
+}
+
+
+@end
